--- a/src/styles/components/CartSummary.scss
+++ b/src/styles/components/CartSummary.scss
@@ -2,8 +2,15 @@
 
 .cart-summary {
     @include card;
-    width: fit-content;
-    margin: 0 auto;
+    width: 100%;
+    border: none;
+    margin: 0;
+    @media screen and (max-width: 600px) {
+        padding: 0;
+        width: 100%;
+        margin: 0;
+        border: none;
+    }
 
     .cart-header {
         @include flex-between;
@@ -28,6 +35,10 @@
     }
 
     .cart-items {
+        @media screen and (max-width: 600px) {
+            padding: 0;
+        }
+
         .cart-item {
             display: grid;
             grid-template-columns: 100px 1fr auto;
@@ -35,6 +46,12 @@
             padding: $spacing-lg 0;
             border-bottom: 1px solid $border-color;
             width: 100%;
+
+            @media screen and (max-width: 600px) {
+                grid-template-columns: 64px 1fr auto;
+                padding: $spacing-sm 0;
+                margin-bottom: $spacing-md;
+            }
 
             &:last-child {
                 border-bottom: none;
@@ -45,6 +62,11 @@
                 height: 100px;
                 border-radius: $border-radius-md;
                 overflow: hidden;
+
+                @media screen and (max-width: 600px) {
+                    width: 72px;
+                    height: 72px;
+                }
 
                 img {
                     width: 100%;
@@ -121,6 +143,23 @@
             @include flex-between;
             margin-bottom: $spacing-md;
             font-size: $font-size-lg;
+            width: 100%;
+
+            span:first-child {
+                text-align: left;
+            }
+        
+            span:last-child {
+                text-align: right;
+                font-weight: bold;
+            }
+
+            @media screen and (max-width: 600px) {
+                display: flex;
+                justify-content: space-between;
+                font-size: $font-size-base;
+                
+            }
 
             &.total {
                 font-size: $font-size-xl;
@@ -128,6 +167,12 @@
                 margin-top: $spacing-lg;
                 padding-top: $spacing-lg;
                 border-top: 1px solid $border-color;
+
+                @media screen and (max-width: 600px) {
+                    font-size: $font-size-lg;
+                    margin-top: $spacing-sm;
+                    padding-top: $spacing-sm;
+                }
             }
         }
     }
